- Moving form control CRUD buttons to form out of dialog. - Adding spacing between CRUD buttons. - Reducing spacing between form input types to temporarily fix dialog sizing on smaller widths. - Adding TODOs.

--- a/ClientApp/src/app/dynamic/dialog/dialog.component.css
+++ b/ClientApp/src/app/dynamic/dialog/dialog.component.css
@@ -1,7 +1,3 @@
-.action-header {
-    margin-bottom: 20px;
-}
-
 .container {
     overflow: hidden;
 }
